[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-env"
version = "1.0.0"
description = "Medical emergency room RL environment"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "my_env.server.app:main"

[tool.setuptools]
packages = ["my_env", "my_env.server"]
