[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-env"
version = "1.0.0"
description = "Medical emergency room RL environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools]
packages = ["my_env", "my_env.server", "my_env.server.data"]
